<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_gravity="center"
        android:padding="@dimen/padding_small"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/editcart"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="@dimen/padding_large"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daystohire"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:padding="@dimen/padding_medium"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:hint="@string/days"
            android:inputType="number"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="@dimen/padding_large"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemqty"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:padding="@dimen/padding_medium"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:hint="@string/qty"
            android:inputType="number"
            android:layout_weight="1"/>
    </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:background="@drawable/rounded_blue"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="@dimen/padding_medium"
            android:layout_margin="@dimen/padding_large"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>



</LinearLayout>